<resources>

    <string name="app_name">Auto Sleep</string>

    <string name="runservice">Service running</string>
    <string name="runservice_summary">Enable this option so that the device can automatically enter sleep when it stops being charged</string>

    <string name="settings_title">Settings</string>

    <string name="allowcancel">Allow cancel</string>
    <string name="allowcancel_summary">Display a dialog, in which the user can cancel the auto sleep.</string>

    <string name="delay">Delay</string>
    <string name="delay_summary">The time the cancel dialog is displayed. After the delay, the device will enter sleep.</string>

    <string name="extra_title">Extra</string>
    <string name="about">About...</string>
    <string name="about_summary">Display extra information about this program</string>
    <string name="about_message">
        <b>Auto Sleep</b> will bring your device in sleep when the device
        is no longer being charged. This is especially useful when you are
        using your device as a navigation system in your car.\n\n\n
        <b>Programming:</b>
        Pieter Pareit (pieter.pareit@gmail.com)\n\n
        <b>Artwork:</b>
        Birgit Niemegeers\n\n
        <b>License: </b>
        GNU General Public License v3.0\n\n
    </string>
    <string name="donate">Donate...</string>
    <string name="donate_summary">Support development of this and more open source applications</string>
    <string name="donate_01_euro">1 euro</string>
    <string name="donate_02_euro">2 euro</string>
    <string name="donate_05_euro">5 euro</string>
    <string name="donate_10_euro">10 euro</string>
    <string name="donate_20_euro">20 euro</string>
    <string name="donated_thank_user">Thanks you for your donation!</string>

    <string name="cancel_title">Charge Off</string>
    <string name="cancel_message">The device will enter sleep state in %s seconds.</string>
    <string name="cancel">Cancel</string>
    <string name="sleepnow">Enter sleep now</string>

    <string name="admin_description">Permission is needed to lock the screen.</string>

</resources>
