<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:key="runservice"
        android:title="@string/runservice"
        android:summary="@string/runservice_summary" />

    <PreferenceCategory
        android:key="settings_category"
        android:title="@string/settings_title">
        <CheckBoxPreference
            android:key="allowcancel"
            android:title="@string/allowcancel"
            android:summary="@string/allowcancel_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="delay"
            android:title="@string/delay"
            android:summary="@string/delay_summary"
            android:entries="@array/delay_entries"
            android:entryValues="@array/delay_values"
            android:defaultValue="15" />
    </PreferenceCategory>

</PreferenceScreen>
